[package]
name = "factory"
version = "0.1.0"
authors = ["lipu <83365885@qq.com>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }

math = { version = "0.1.0", path = "math", default-features = false, features = ["ink-as-dependency"] }
base = { version = "0.1.0", path = "base", default-features = false, features = ["ink-as-dependency"] }
token = { version = "0.1.0", path = "token", default-features = false, features = ["ink-as-dependency"] }
pool = { version = "0.1.0", path = "pool", default-features = false, features = ["ink-as-dependency"] }

scale = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }

# Should be removed once bitvecto-rs/bitvec#105 is resolved
funty = "=1.1.0"

[lib]
name = "factory"
path = "lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",

    "math/std",
    "base/std",
    "token/std",
    "pool/std",
]
ink-as-dependency = []

[workspace]
members = [
    "math",
    "base",
    "token",
    "pool",
]
